	     to same nid. target_handle_connect found old connect cockie and
	     tried to reconnect, but can't find export for this cockie.

Severity   : normal
Bugzilla   : 11756
Frequency  : rare
Description: umount blocks forever on error
Details    : In result of wrong using obd_no_recov and obd_force flags client can
             hand if cancel or some other requests is lost.

--------------------------------------------------------------------------------

2007-07-30         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.1
       * Support for kernels:
        2.6.5-7.283 (SLES 9)
        2.6.9-55.EL (RHEL 4)
        2.6.16.46-0.14 (SLES 10)
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.39.cfs8
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * Starting with this release, the ldiskfs backing filesystem required
        by Lustre is now in its own package, lustre-ldiskfs.  This package
        should be installed.  It is versioned separately from Lustre and
        may be released separately in future.


Severity   : normal
Frequency  : rare
Bugzilla   : 13129
Description: server LBUG when shutting down
Details    : Block umount forever until the mount refcount is zero rather
	     than giving up after an arbitrary timeout.
	
Severity   : enhancement
Bugzilla   : 12194
Description: add optional extra BUILD_VERSION info
Details    : add a new environment variable (namely LUSTRE_VERS) which allows
	     to override the lustre version.

Severity   : normal
Frequency  : 2.6.18 servers only
Bugzilla   : 12546
Description: ll_kern_mount() doesn't release the module reference